router edit cart hechos

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -110,6 +110,7 @@ button {
 
 .buttonX {
   color : black;
+  display : block;
   /* sube el boton para estar al nivel del msg  */
   position: relative;
   top: -60px;
